Removed fixed dependency to ServiceStack 4.0.18

--- a/src/Hipchat-CS.nuspec
+++ b/src/Hipchat-CS.nuspec
@@ -12,7 +12,7 @@
     <language>en-US</language>
     <projectUrl>https://github.com/KyleGobel/Hipchat-CS/</projectUrl>
     <dependencies>
-      <dependency id="ServiceStack.Text" version="4.0.18"/>
+      <dependency id="ServiceStack.Text"/>
     </dependencies>
   </metadata>
   <files>
